@@ -1,0 +1,78 @@
+<?php
+
+namespace Packetery\Tools;
+
+use Configuration;
+use Shop;
+
+class ConfigHelper
+{
+    private static $configBehavior = [
+        'PACKETERY_APIPASS' => 'all',
+        // It is possible to have multiple senders for one set of credentials.
+        'PACKETERY_ESHOP_ID' => 'separate',
+        'PACKETERY_LABEL_FORMAT' => 'all',
+        'PACKETERY_LAST_CARRIERS_UPDATE' => 'all',
+        'PACKETERY_WIDGET_AUTOOPEN' => 'all',
+        'PACKETERY_CRON_TOKEN' => 'all',
+        'PACKETERY_LABEL_MAX_AGE_DAYS' => 'all',
+    ];
+
+    /**
+     * We do not try to fix rare errors caused by using pre 3.0 versions with multistore on.
+     * @param string $key
+     * @return false|string
+     */
+    public static function get($key, $groupId = false, $shopId = false)
+    {
+        if (self::$configBehavior[$key] === 'all') {
+            return Configuration::get($key, null, null, null);
+        }
+
+        if ($groupId === false) {
+            $groupId = Shop::getContextShopGroupID(true);
+        }
+        if ($shopId === false) {
+            $shopId = Shop::getContextShopID(true);
+        }
+        $value = Configuration::get($key, null, $groupId, $shopId);
+        // if no value set, try to get value set in older module version, but not for another shop
+        if ($value === false && $groupId && $shopId) {
+            $value = Configuration::get($key, null, $groupId);
+        }
+        if ($value === false && $groupId) {
+            $value = Configuration::get($key);
+        }
+
+        return $value;
+    }
+
+    /**
+     * @param array $keys
+     * @return array
+     */
+    public static function getMultiple($keys)
+    {
+        $results = [];
+        foreach ($keys as $key) {
+            $results[$key] = self::get($key);
+        }
+
+        return $results;
+    }
+
+    /**
+     * @param string $key
+     * @param mixed $values
+     * @return bool
+     */
+    public static function update($key, $values)
+    {
+        if (self::$configBehavior[$key] === 'all') {
+            return Configuration::updateValue($key, $values, false, null, null);
+        }
+
+        return Configuration::updateValue($key, $values);
+    }
+
+}
