@@ -84,3 +84,5 @@
       - Added: validated address is saved to db and used in exports
       - Updated: pickup point update changed to carrier update, improving speed and reliability
       - Updated: carrier list in module administration realised using standard PrestaShop's controller.
+      - Added: in the case of a multistore, the list of orders and export in the administration
+        takes into account the selected shop or shop group
